Fix project switcher layout on small screens

--- a/client/src/components/project-switcher/icon-project-switcher-styles.css
+++ b/client/src/components/project-switcher/icon-project-switcher-styles.css
@@ -34,3 +34,9 @@
   font-size: 3rem;
   margin-bottom: 1rem;
 }
+
+@media screen and (max-width: 940px) {
+  .container {
+    flex-direction: column;
+  }
+}
